{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 117,
  "lineage": "13bb4ac6-2941-b553-f15a-45f6781b7142",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat-gate1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a157c0da730032de",
            "domain": "vpc",
            "id": "eipalloc-07e0e65e9e7d8dcad",
            "network_border_group": "us-east-1",
            "network_interface": "eni-091c02bdad9127b38",
            "private_dns": "ip-10-10-2-192.ec2.internal",
            "private_ip": "10.10.2.192",
            "public_dns": "ec2-54-167-217-142.compute-1.amazonaws.com",
            "public_ip": "54.167.217.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip one"
            },
            "tags_all": {
              "Name": "eip one"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat-gate2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0949f10e0e9ea4dd9",
            "domain": "vpc",
            "id": "eipalloc-0d109e7fc348fbd51",
            "network_border_group": "us-east-1",
            "network_interface": "eni-095a0fe76571e29b4",
            "private_dns": "ip-10-10-3-141.ec2.internal",
            "private_ip": "10.10.3.141",
            "public_dns": "ec2-34-231-197-142.compute-1.amazonaws.com",
            "public_ip": "34.231.197.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip two"
            },
            "tags_all": {
              "Name": "eip two"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Webo1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0747bdcabd34c712a",
            "arn": "arn:aws:ec2:us-east-1:671698158650:instance/i-0a9dd09cefc27a333",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9dd09cefc27a333",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ac0f2c7eb0477544",
            "private_dns": "ip-10-10-0-235.ec2.internal",
            "private_ip": "10.10.0.235",
            "public_ip": "54.226.148.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03427be8c07da4c02",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044c99c2047821b7b",
            "tags": {
              "Name": "Webo1",
              "Subnet": "Public",
              "Tier": "Web"
            },
            "tags_all": {
              "Name": "Webo1",
              "Subnet": "Public",
              "Tier": "Web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-032e2ec0540b2d52e"
            ]
          },
          "dependencies": [
            "aws_subnet.public-main-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Webo2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0747bdcabd34c712a",
            "arn": "arn:aws:ec2:us-east-1:671698158650:instance/i-0fd2c9e4c40a96139",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd2c9e4c40a96139",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03ffd4b9faf7217b4",
            "private_dns": "ip-10-10-1-223.ec2.internal",
            "private_ip": "10.10.1.223",
            "public_ip": "35.175.240.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a37f4d11c3fad50d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad24ea4f641e9f93",
            "tags": {
              "Name": "Webo2",
              "Subnet": "Public",
              "Tier": "Web"
            },
            "tags_all": {
              "Name": "Webo2",
              "Subnet": "Public",
              "Tier": "Web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-032e2ec0540b2d52e"
            ]
          },
          "dependencies": [
            "aws_subnet.public-main_us_east_1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "serv_app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0747bdcabd34c712a",
            "arn": "arn:aws:ec2:us-east-1:671698158650:instance/i-0b5d6bb01fe9ecdfb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b5d6bb01fe9ecdfb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aae5b40469a93876",
            "private_dns": "ip-10-10-2-92.ec2.internal",
            "private_ip": "10.10.2.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02b3dbfdad1e2e501",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0421a9c4e8683df13",
            "tags": {
              "Name": "serv_app1",
              "Subnet": "Private",
              "Tier": "Application"
            },
            "tags_all": {
              "Name": "serv_app1",
              "Subnet": "Private",
              "Tier": "Application"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-032e2ec0540b2d52e"
            ]
          },
          "dependencies": [
            "aws_subnet.private-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "serv_app2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0747bdcabd34c712a",
            "arn": "arn:aws:ec2:us-east-1:671698158650:instance/i-0efa2078750f33e29",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0efa2078750f33e29",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09f8fd52b122d6b61",
            "private_dns": "ip-10-10-3-46.ec2.internal",
            "private_ip": "10.10.3.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-028cab5d43562396d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066bac91bf537721d",
            "tags": {
              "Name": "serv_app2",
              "Subnet": "Private",
              "Tier": "Application"
            },
            "tags_all": {
              "Name": "serv_app2",
              "Subnet": "Private",
              "Tier": "Application"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-032e2ec0540b2d52e"
            ]
          },
          "dependencies": [
            "aws_subnet.private-main2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671698158650:internet-gateway/igw-01ce2bf73d872e01c",
            "id": "igw-01ce2bf73d872e01c",
            "owner_id": "671698158650",
            "tags": {
              "Name": "TF-igw"
            },
            "tags_all": {
              "Name": "TF-igw"
            },
            "vpc_id": "vpc-0512750a61396e81c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d109e7fc348fbd51",
            "connectivity_type": "public",
            "id": "nat-0aeb44a0a3c7b1dfc",
            "network_interface_id": "eni-095a0fe76571e29b4",
            "private_ip": "10.10.3.141",
            "public_ip": "34.231.197.142",
            "subnet_id": "subnet-066bac91bf537721d",
            "tags": {
              "Name": "nat-gate2"
            },
            "tags_all": {
              "Name": "nat-gate2"
            }
          },
          "dependencies": [
            "aws_eip.eip-nat-gate2",
            "aws_subnet.private-main2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gate1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e0e65e9e7d8dcad",
            "connectivity_type": "public",
            "id": "nat-0668efa7ab79b6908",
            "network_interface_id": "eni-091c02bdad9127b38",
            "private_ip": "10.10.2.192",
            "public_ip": "54.167.217.142",
            "subnet_id": "subnet-0421a9c4e8683df13",
            "tags": {
              "Name": "nat-gate1"
            },
            "tags_all": {
              "Name": "nat-gate1"
            }
          },
          "dependencies": [
            "aws_eip.eip-nat-gate1",
            "aws_subnet.private-main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671698158650:route-table/rtb-08df377f93fee5b75",
            "id": "rtb-08df377f93fee5b75",
            "owner_id": "671698158650",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Route_table"
            },
            "tags_all": {
              "Name": "Route_table"
            },
            "vpc_id": "vpc-0512750a61396e81c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671698158650:route-table/rtb-05c572b675f947970",
            "id": "rtb-05c572b675f947970",
            "owner_id": "671698158650",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route-table-priv"
            },
            "tags_all": {
              "Name": "route-table-priv"
            },
            "vpc_id": "vpc-0512750a61396e81c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5f5e9a9d7ab2757",
            "route_table_id": "rtb-05c572b675f947970",
            "subnet_id": "subnet-0421a9c4e8683df13"
          },
          "dependencies": [
            "aws_route_table.route-table-priv",
            "aws_subnet.private-main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0991fdb32c4b72404",
            "route_table_id": "rtb-05c572b675f947970",
            "subnet_id": "subnet-066bac91bf537721d"
          },
          "dependencies": [
            "aws_route_table.route-table-priv",
            "aws_subnet.private-main2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-ass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6abb1a9cf23d472",
            "route_table_id": "rtb-08df377f93fee5b75",
            "subnet_id": "subnet-044c99c2047821b7b"
          },
          "dependencies": [
            "aws_route_table.Route_table",
            "aws_subnet.public-main-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-ass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efe9600acc87c652",
            "route_table_id": "rtb-08df377f93fee5b75",
            "subnet_id": "subnet-0ad24ea4f641e9f93"
          },
          "dependencies": [
            "aws_route_table.Route_table",
            "aws_subnet.public-main_us_east_1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Database-security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671698158650:security-group/sg-0b2fb52cec91a6616",
            "description": "Enable Database access on port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2fb52cec91a6616",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "RDS Access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9b160ddbf29cf64"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database Security Group",
            "name_prefix": "",
            "owner_id": "671698158650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database Security Groups"
            },
            "tags_all": {
              "Name": "Database Security Groups"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512750a61396e81c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ssh-sg",
            "aws_vpc.main",
            "aws_security_group.Webserver-sg",
            "aws_security_group.alb-security-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671698158650:security-group/sg-0f9b160ddbf29cf64",
            "description": "Enable HTTPS/HTTP access on port 443/80 via ALB and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9b160ddbf29cf64",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c84159dc42a5ae3"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c84159dc42a5ae3"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b4ccfab0e662bc50"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "webserver Security Group",
            "name_prefix": "",
            "owner_id": "671698158650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver sg"
            },
            "tags_all": {
              "Name": "webserver sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512750a61396e81c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_security_group.ssh-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671698158650:security-group/sg-00c84159dc42a5ae3",
            "description": "Enable HTTP/HTTPS access on port 443/80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c84159dc42a5ae3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "HTTPS Acess",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ALB security group",
            "name_prefix": "",
            "owner_id": "671698158650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB security group"
            },
            "tags_all": {
              "Name": "ALB security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512750a61396e81c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671698158650:security-group/sg-0b4ccfab0e662bc50",
            "description": "Enable SSH access on Port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4ccfab0e662bc50",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH Access",
            "name_prefix": "",
            "owner_id": "671698158650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH Security Group"
            },
            "tags_all": {
              "Name": "SSH Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512750a61396e81c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671698158650:subnet/subnet-0421a9c4e8683df13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-0421a9c4e8683df13",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671698158650",
            "tags": {
              "Name": "private-subnet.Main"
            },
            "tags_all": {
              "Name": "private-subnet.Main"
            },
            "vpc_id": "vpc-0512750a61396e81c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-main2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671698158650:subnet/subnet-066bac91bf537721d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-066bac91bf537721d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671698158650",
            "tags": {
              "Name": "private-subnet.Main2"
            },
            "tags_all": {
              "Name": "private-subnet.Main2"
            },
            "vpc_id": "vpc-0512750a61396e81c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-main-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671698158650:subnet/subnet-044c99c2047821b7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.0/24",
            "id": "subnet-044c99c2047821b7b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671698158650",
            "tags": {
              "Name": "public-main subnet us-east-1a"
            },
            "tags_all": {
              "Name": "public-main subnet us-east-1a"
            },
            "vpc_id": "vpc-0512750a61396e81c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-main_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671698158650:subnet/subnet-0ad24ea4f641e9f93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0ad24ea4f641e9f93",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671698158650",
            "tags": {
              "Name": "Public Subnet main.us-east-1b"
            },
            "tags_all": {
              "Name": "Public Subnet main.us-east-1b"
            },
            "vpc_id": "vpc-0512750a61396e81c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671698158650:vpc/vpc-0512750a61396e81c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0f18afcb5f2db69b6",
            "default_route_table_id": "rtb-0f100824475ab3aba",
            "default_security_group_id": "sg-032e2ec0540b2d52e",
            "dhcp_options_id": "dopt-df0942a5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0512750a61396e81c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f100824475ab3aba",
            "owner_id": "671698158650",
            "tags": {
              "Name": "TF-vpc"
            },
            "tags_all": {
              "Name": "TF-vpc"
            }
          }
        }
      ]
    }
  ]
}